--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: postgresql://postgres:rYWJhVuTf4LzyptY68BT@containers-us-west-4.railway.app:5638/railway
+    url: jbdc:postgresql://postgres:rYWJhVuTf4LzyptY68BT@containers-us-west-4.railway.app:5638/railway
     username: postgres
     password: rYWJhVuTf4LzyptY68BT
     name: Order Service
