--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:rYWJhVuTf4LzyptY68BT@containers-us-west-4.railway.app:5638/railway
+    url: jdbc:postgresql://$containers-us-west-4.railway.app:$5638/$railway
     username: postgres
     password: rYWJhVuTf4LzyptY68BT
-    name: Order Service
+    name: railway
 
     sql:
       init:
