--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://$containers-us-west-4.railway.app:$5638/$railway
+    url: jdbc:postgresql://${containers-us-west-4.railway.app}:${5638}/${railway}
     username: postgres
     password: rYWJhVuTf4LzyptY68BT
     name: railway
