--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 server.port=8083
-spring.datasource.url=postgresql://postgres:rYWJhVuTf4LzyptY68BT@containers-us-west-4.railway.app:5638/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 
